--- a/DataFormats/FEDRawData/CMakeLists.txt
+++ b/DataFormats/FEDRawData/CMakeLists.txt
@@ -26,9 +26,9 @@ FWCoreUtilities
 )
 
 
-install( TARGETS DataFormatsFEDRawData DESTINATION  lib  EXPORT cmssw::DataFormatsFEDRawData)
+install( TARGETS DataFormatsFEDRawData DESTINATION ${CMAKE_INSTALL_LIBDIR} EXPORT fwcore::DataFormatsFEDRawData)
 
-include_directories(
+include_directories(${CMAKE_SOURCE_DIR}
 ${Boost_INCLUDE_DIR}
 ${MD5_INCLUDE_DIR}
 ${ROOT_INCLUDE_DIR}
@@ -37,13 +37,17 @@ ${TINYXML2_INCLUDE_DIR}
 ${UUID_INCLUDE_DIR}
 )
 
-include_directories(${CMAKE_SOURCE_DIR})
-
-include_directories(/usr/include/)
-
 reflex_build_dictionary(DataFormatsFEDRawData src/classes.h src/classes_def.xml)
 
-add_dependencies(DataFormatsFEDRawData DataFormatsFEDRawData-dictgen)
+add_library(DataFormatsFEDRawDataDictObj OBJECT ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawData.cxx)
 
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawDataDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawData.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+set_property(TARGET DataFormatsFEDRawDataDictObj PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+add_dependencies(DataFormatsFEDRawDataDictObj DataFormatsFEDRawData-dictgen)
+
+add_dependencies(DataFormatsFEDRawData DataFormatsFEDRawDataDictObj)
+
+target_link_libraries(DataFormatsFEDRawData PUBLIC $<TARGET_OBJECTS:DataFormatsFEDRawDataDictObj>)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawData_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawDataDict.rootmap DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
