--- a/DataFormats/FEDRawData/test/CMakeLists.txt
+++ b/DataFormats/FEDRawData/test/CMakeLists.txt
@@ -21,7 +21,7 @@ DataFormatsFEDRawData
 )
 
 
-add_test(NAME testFEDRawData COMMAND testFEDRawData)
+add_test(testFEDRawData testFEDRawData)
 
 add_library(testDumpFEDRawDataProduct SHARED 
   DumpFEDRawDataProduct.cc
