--- a/DataFormats/FWLite/CMakeLists.txt
+++ b/DataFormats/FWLite/CMakeLists.txt
@@ -52,9 +52,9 @@ ROOT::Tree
 )
 
 
-install( TARGETS DataFormatsFWLite DESTINATION  lib  EXPORT cmssw::DataFormatsFWLite)
+install( TARGETS DataFormatsFWLite DESTINATION ${CMAKE_INSTALL_LIBDIR} EXPORT fwcore::DataFormatsFWLite)
 
-include_directories(
+include_directories(${CMAKE_SOURCE_DIR}
 ${Boost_INCLUDE_DIR}
 ${MD5_INCLUDE_DIR}
 ${ROOT_INCLUDE_DIR}
@@ -63,13 +63,17 @@ ${TINYXML2_INCLUDE_DIR}
 ${UUID_INCLUDE_DIR}
 )
 
-include_directories(${CMAKE_SOURCE_DIR})
-
-include_directories(/usr/include/)
-
 reflex_build_dictionary(DataFormatsFWLite src/classes.h src/classes_def.xml)
 
-add_dependencies(DataFormatsFWLite DataFormatsFWLite-dictgen)
+add_library(DataFormatsFWLiteDictObj OBJECT ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFWLite.cxx)
 
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFWLiteDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFWLite.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+set_property(TARGET DataFormatsFWLiteDictObj PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+add_dependencies(DataFormatsFWLiteDictObj DataFormatsFWLite-dictgen)
+
+add_dependencies(DataFormatsFWLite DataFormatsFWLiteDictObj)
+
+target_link_libraries(DataFormatsFWLite PUBLIC $<TARGET_OBJECTS:DataFormatsFWLiteDictObj>)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFWLite_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFWLiteDict.rootmap DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
