--- a/FWCore/FWLite/test/CMakeLists.txt
+++ b/FWCore/FWLite/test/CMakeLists.txt
@@ -6,6 +6,7 @@ target_include_directories(testFWCoreFWLite PRIVATE ${CMAKE_SOURCE_DIR})
 
 target_include_directories(testFWCoreFWLite PUBLIC
 ${Boost_INCLUDE_DIR}
+${CPPUNIT_INCLUDE_DIR}
 ${MD5_INCLUDE_DIR}
 ${ROOT_INCLUDE_DIR}
 ${TBB_INCLUDE_DIRS}
@@ -14,12 +15,13 @@ ${UUID_INCLUDE_DIR}
 )
 
 target_link_libraries(testFWCoreFWLite PUBLIC
+${CPPUNIT_LIBRARY}
 DataFormatsTestObjects
 FWCoreFWLite
 )
 
 
-add_test(NAME testFWCoreFWLite COMMAND testFWCoreFWLite)
+add_test(testFWCoreFWLite testFWCoreFWLite)
 
 add_executable(TestRunnerFWCoreFWLite
   TestRunnerFWCoreFWLite.cpp
@@ -29,6 +31,7 @@ target_include_directories(TestRunnerFWCoreFWLite PRIVATE ${CMAKE_SOURCE_DIR})
 
 target_include_directories(TestRunnerFWCoreFWLite PUBLIC
 ${Boost_INCLUDE_DIR}
+${CPPUNIT_INCLUDE_DIR}
 ${MD5_INCLUDE_DIR}
 ${ROOT_INCLUDE_DIR}
 ${TBB_INCLUDE_DIRS}
@@ -37,10 +40,11 @@ ${UUID_INCLUDE_DIR}
 )
 
 target_link_libraries(TestRunnerFWCoreFWLite PUBLIC
+${CPPUNIT_LIBRARY}
 FWCoreFWLite
 FWCoreUtilities
 )
 
 
-add_test(NAME TestRunnerFWCoreFWLite COMMAND TestRunnerFWCoreFWLite)
+add_test(TestRunnerFWCoreFWLite TestRunnerFWCoreFWLite)
 
