--- a/FWCore/PyDevParameterSet/test/CMakeLists.txt
+++ b/FWCore/PyDevParameterSet/test/CMakeLists.txt
@@ -26,5 +26,5 @@ FWCoreUtilities
 )
 
 
-add_test(NAME testPyBind11ParameterSet COMMAND testPyBind11ParameterSet)
+add_test(testPyBind11ParameterSet testPyBind11ParameterSet)
 
