--- a/FWCore/TFWLiteSelector/test/CMakeLists.txt
+++ b/FWCore/TFWLiteSelector/test/CMakeLists.txt
@@ -24,5 +24,5 @@ FWCoreUtilities
 )
 
 
-add_test(NAME TestRunnerFWCoreTFWLiteSelector COMMAND TestRunnerFWCoreTFWLiteSelector)
+add_test(TestRunnerFWCoreTFWLiteSelector TestRunnerFWCoreTFWLiteSelector)
 
