--- a/DataFormats/FWLite/test/CMakeLists.txt
+++ b/DataFormats/FWLite/test/CMakeLists.txt
@@ -6,6 +6,7 @@ target_include_directories(testDataFormatsFWLiteMakeInput PRIVATE ${CMAKE_SOURCE
 
 target_include_directories(testDataFormatsFWLiteMakeInput PUBLIC
 ${Boost_INCLUDE_DIR}
+${CPPUNIT_INCLUDE_DIR}
 ${MD5_INCLUDE_DIR}
 ${ROOT_INCLUDE_DIR}
 ${TBB_INCLUDE_DIRS}
@@ -14,12 +15,13 @@ ${UUID_INCLUDE_DIR}
 )
 
 target_link_libraries(testDataFormatsFWLiteMakeInput PUBLIC
+${CPPUNIT_LIBRARY}
 DataFormatsFWLite
 FWCoreUtilities
 )
 
 
-add_test(NAME testDataFormatsFWLiteMakeInput COMMAND testDataFormatsFWLiteMakeInput)
+add_test(testDataFormatsFWLiteMakeInput testDataFormatsFWLiteMakeInput)
 
 add_executable(testDataFormatsFWLite
   format_type_name.cppunit.cpp
@@ -30,6 +32,7 @@ target_include_directories(testDataFormatsFWLite PRIVATE ${CMAKE_SOURCE_DIR})
 
 target_include_directories(testDataFormatsFWLite PUBLIC
 ${Boost_INCLUDE_DIR}
+${CPPUNIT_INCLUDE_DIR}
 ${MD5_INCLUDE_DIR}
 ${ROOT_INCLUDE_DIR}
 ${TBB_INCLUDE_DIRS}
@@ -38,13 +41,14 @@ ${UUID_INCLUDE_DIR}
 )
 
 target_link_libraries(testDataFormatsFWLite PUBLIC
+${CPPUNIT_LIBRARY}
 DataFormatsFWLite
 DataFormatsTestObjects
 FWCoreFWLite
 )
 
 
-add_test(NAME testDataFormatsFWLite COMMAND testDataFormatsFWLite)
+add_test(testDataFormatsFWLite testDataFormatsFWLite)
 
 add_executable(TestRunnerDataFormatsFWLite
   TestRunnerDataFormatsFWLite.cpp
@@ -54,6 +58,7 @@ target_include_directories(TestRunnerDataFormatsFWLite PRIVATE ${CMAKE_SOURCE_DI
 
 target_include_directories(TestRunnerDataFormatsFWLite PUBLIC
 ${Boost_INCLUDE_DIR}
+${CPPUNIT_INCLUDE_DIR}
 ${MD5_INCLUDE_DIR}
 ${ROOT_INCLUDE_DIR}
 ${TBB_INCLUDE_DIRS}
@@ -62,10 +67,11 @@ ${UUID_INCLUDE_DIR}
 )
 
 target_link_libraries(TestRunnerDataFormatsFWLite PUBLIC
+${CPPUNIT_LIBRARY}
 DataFormatsFWLite
 FWCoreUtilities
 )
 
 
-add_test(NAME TestRunnerDataFormatsFWLite COMMAND TestRunnerDataFormatsFWLite)
+add_test(TestRunnerDataFormatsFWLite TestRunnerDataFormatsFWLite)
 
